--- a/portStyle.css
+++ b/portStyle.css
@@ -326,6 +326,9 @@ footer {
     p {
         margin: 10px;
     }
+    #home {
+        padding: 20px 0px;
+    }
 
     h1 {
         font-size: x-large;
