--- a/portStyle.css
+++ b/portStyle.css
@@ -10,7 +10,7 @@ main {
 
 
 body {
-    margin: 0px;
+    margin: 10px 0px 0px 0px;
     background-color: rgb(210, 209, 209);
     color: black;
 
